# nav2-test

./: .gitignore  readme.md
my_sim_tesi_bringup/: package.xml
my_sim_tesi_bringup/config/: final_simulation_config.rviz  nav2_param_config.yaml  pointcloud_to_laserscan.yaml  robot_pointcloud_to_laserscan.yaml  ros_gz_bridge_final_config.yaml
my_sim_tesi_bringup/launch/: my_sim_final.launch.py  nav2.launch.py
my_sim_tesi_bringup/map/: my_map.yaml
my_sim_tesi_gazebo/: depth_clib.yaml  package.xml
my_sim_tesi_gazebo/models/pioneer2dx/: model.sdf  model.urdf
my_sim_tesi_gazebo/models/quadcopter/: model.sdf  model_bak.sdf
my_sim_tesi_ros2_interfaces/: package.xml
my_sim_tesi_ros2_nodes/: CMakeLists.txt  package.xml
my_sim_tesi_ros2_nodes/include/my_sim_tesi_ros2_nodes/: orchestrator_node.hpp  simple_controller.hpp
my_sim_tesi_ros2_nodes/scripts/: odom_to_tf_node.py
my_sim_tesi_ros2_nodes/src/: orchestrator_node.cpp  simple_controller.cpp
